updating kringing functions

--- a/exploratory/src/1.0_current_pattern_of_resistances.md
+++ b/exploratory/src/1.0_current_pattern_of_resistances.md
@@ -3,13 +3,13 @@
 ## Tests and hypotheses
 
 * Extensive herbicide resistance variation exist across the landscape.
-* Siginificant correlated resistances exist not only within herbicide groups but also across because of the common detoxification pathways needed to overcome the adverse effects of herbicides
+* Significant correlated resistances exist not only within herbicide groups but also across because of the common detoxification pathways needed to overcome the adverse effects of herbicides
 * There is more resistance for herbicides that has been around for longer and in areas with continuous cropping especially the minimum tillage areas.
-* Geographical locations cannot accurately determine levels of resistance, envirnomental and genomic information is required
+* Geographical locations cannot accurately determine levels of resistance, environmental and genomic information is required
 * Using other herbicide resistances can help improve the predictive accuracy of the models, i.e. especially in the case of correlated resistances
 
 ## Findings
 
-There is no clear/sifginificant geographic gradient to the distribution of herbicide resistances across SE Australia. This probably means that herbicide resisitances are evolving from either standing genetic variation (as affected by founder effects) and *de novo* mutation (as affected by population size).
+There is no clear/significant geographic gradient to the distribution of herbicide resistances across SE Australia. This probably means that herbicide resisitances are evolving from either standing genetic variation (as affected by founder effects) and *de novo* mutation (as affected by population size).
 
 
