--- a/exploratory/src/1.1_coordinates.md
+++ b/exploratory/src/1.1_coordinates.md
@@ -1,170 +1,41 @@
 # 1. What is the current pattern of herbicide resistances across SE Australia?
 
-## 1.1. Models of herbicide resistances across SE Austrlia using geographic coordinates
+## 1.1. Models of herbicide resistances across SE Australia using geographic coordinates
 
 Plot levels of herbicide resistance across the landscape, model the distribution of resistances across the landscape, and assess the significance of longitude, latitude, and longitude-by-latitude effects.
 
 This will serve as our null model against which subsequent models will compared to.
 
 ```R
-library(sf)
-library(sp)
-library(automap)
-setwd("/data-weedomics-1/Lolium_rigidum_population_and_quantitative_genetics/res")
-
-landscape = sf::st_read("landscape.kml")
-
-phenotypes = read.csv("phenotype_data.csv")
+source("/data-weedomics-1/weedomics/glyphosate_resistance_seau/src/kriging_and_maps.r")
+setwd("/data-weedomics-1/weedomics/exploratory/res")
+fname_region_kml = "landscape.kml"
+fname_phenotype = "phenotype_data.csv"
+phenotypes = read.csv(fname_phenotype)
 phenotypes = phenotypes[!is.na(phenotypes$Longitude), ]
 phenotypes = phenotypes[!is.na(phenotypes$Latitude), ]
 x_limit = range(phenotypes$Longitude)
 y_limit = range(phenotypes$Latitude)
-vec_herbicides = colnames(phenotypes)[3:(ncol(phenotypes)-2)]
+idx_herbicide_columns = which(!grepl("Population", colnames(phenotypes)) & 
+                              !grepl("Pool", colnames(phenotypes)) &
+                              !grepl("Batch", colnames(phenotypes)) &
+                              !grepl("Latitude", colnames(phenotypes)) &
+                              !grepl("Longitude", colnames(phenotypes)))
+vec_herbicides = colnames(phenotypes)[idx_herbicide_columns]
 
-R = c() ### Miscellaneous: resistances matrix to make a sf object
+colours = list(rdylgn=rev(c("#A50026","#D73027","#F46D43","#FDAE61","#FEE08B","#FFFFBF","#D9EF8B","#A6D96A","#66BD63","#1A9850","#006837")),
+            spectral=rev(c("#9e0142","#d53e4f","#f46d43","#fdae61","#fee08b","#ffffbf","#e6f598","#abdda4","#66c2a5","#3288bd","#5e4fa2")),
+            rdpu=c("#fff7f3","#fde0dd","#fcc5c0","#fa9fb5","#f768a1","#dd3497","#ae017e","#7a0177","#49006a"))
+n_colours = 101
 for (herbi in vec_herbicides) {
-    # herbi = vec_herbicides[1]
-    x = phenotypes$Longitude
-    y = phenotypes$Latitude
-    z = eval(parse(text=paste0("phenotypes$", herbi)))
-    idx = !is.na(z)
-    x = x[idx]
-    y = y[idx]
-    z = z[idx]
-    df_data = data.frame(x, y, z)
-    # df_data = df_data[!is.na(z), ]
-    ### Centre coordinates so that we can better account for the interaction effect
-    df_data$x = scale(df_data$x, center=TRUE, scale=FALSE)
-    df_data$y = scale(df_data$y, center=TRUE, scale=FALSE)
-    ### Model the herbicide gradient across the landscape
-    mod = lm(z ~ x*y, data=df_data)
-    coef_summary = as.data.frame(summary(mod)$coefficients)
-    sig = c()
-    for (i in 2:nrow(coef_summary)){
-        if (coef_summary[[4]][i] < 0.001) {
-            sig = c(sig, "(***)")
-        } else if (coef_summary[[4]][i] < 0.01) {
-            sig = c(sig, "(**)")
-        } else if (coef_summary[[4]][i] < 0.05) {
-            sig = c(sig, "(*)")
-        } else {
-            sig = c(sig, "(ns)")
-        }
-    }
-    sig_labels = paste(paste(c("Longitude", "Latitude", "Interaction"), sig, sep=""), collapse=", ")
-    ### Transform data.frame into and sp::SpatialPointsDataFrame
-    df_data = aggregate(z ~ x + y, data=df_data, FUN=mean)
-    sp::coordinates(df_data) = ~ x + y
-    ### Prepare the new_data to fit the kriging model built using the above training data
-    df_region = as.data.frame(as.matrix(landscape$geometry[[1]]))
-    colnames(df_region) = c("x", "y", "z")
-    sp::coordinates(df_region) = ~ x + y ### Transform data.frame into and sp::SpatialPointsDataFrame
-    ### Prepare the new_data to fit the kriging model built using the above training data
-    A = sp::Polygon(df_region) ### Transform into a polygon
-    B = sp::spsample(A, n=5000, type="regular") ### Sample regular intervals across the polygon to approximate its area and shape
-    vec_models = c("Exp", "Sph", "Mat", "Ste") ### removing Gaus as it results in a weir interpolation of Sakura
-    K1 = tryCatch(autoKrige.cv(z ~ 1, model=vec_models[1], df_data), error=function(e){autoKrige.cv(z ~ 1, df_data)})
-    K2 = tryCatch(autoKrige.cv(z ~ 1, model=vec_models[2], df_data), error=function(e){autoKrige.cv(z ~ 1, df_data)})
-    K3 = tryCatch(autoKrige.cv(z ~ 1, model=vec_models[3], df_data), error=function(e){autoKrige.cv(z ~ 1, df_data)})
-    K4 = tryCatch(autoKrige.cv(z ~ 1, model=vec_models[4], df_data), error=function(e){autoKrige.cv(z ~ 1, df_data)})
-    # K5 = tryCatch(autoKrige.cv(z ~ 1, model=vec_models[5], df_data), error=function(e){autoKrige.cv(z ~ 1, df_data)})
-    K_compare = compare.cv(K1, K2, K3, K4)
-    rmse = unlist(K_compare[rownames(K_compare)=="RMSE", ])
-    idx = which(rmse == min(rmse))[1]
-    model = vec_models[idx]
-    K = tryCatch(automap::autoKrige(z ~ 1, df_data, model=model, new_data=B),
-                 error=function(e) {automap::autoKrige(z ~ 1, df_data, new_data=B)}
-    )
-    ### Prepare the kriging output for plotting
-    P = cbind(K$krige_output@coords, K$krige_output@data)[, 1:3]
-    ### Set predicted resistances lesst than 0 to 0, and greater than 100 to 100
-    P[P[,3] <   0, 3] = 0
-    P[P[,3] > 100, 3] = 100
-    colnames(P) = c("x", "y", herbi) ### coordinates from the sampled points inside the paddock polygon and the krigng-predicted weed density, z
-    if (length(R) == 0) {
-        R = P[, 1:3]
-    } else {
-        if (nrow(P) > nrow(R)) {
-            R_old = R
-            R = P
-            R = merge(R, R_old, by=c("x", "y"), all=TRUE)
-        } else {
-            R = merge(R, P, by=c("x", "y"), all=TRUE)
-        }
-    }
-    ### Prepare the colours corresponding to the herbicide resistance levels
-    n_colours = 101
-    vec_colours = rev(colorRampPalette(c("#A50026","#D73027","#F46D43","#FDAE61","#FEE08B","#FFFFBF","#D9EF8B","#A6D96A","#66BD63","#1A9850","#006837"))(n_colours))
-    svg(paste0(herbi, "_autokrige.svg"), width=10.5, height=6.5)
-    ### Plot the map
-    plot(0, xlim=x_limit, ylim=y_limit, asp=1, type="n", xlab="Longitude", ylab="Latitude",
-        main=paste0(herbi, " Resistance\n[ ", sig_labels, " ]"))
-    grid()
-    outline = maps::map("world", plot=FALSE)
-    xrange = range(outline$x, na.rm=TRUE)
-    yrange = range(outline$y, na.rm=TRUE)
-    xbox = xrange + c(-2, 2)
-    ybox = yrange + c(-2, 2)
-    ### draw the outline of the map and color the water blue
-    polypath(c(outline$x, NA, c(xbox, rev(xbox))),
-           c(outline$y, NA, rep(ybox, each=2)),
-           col="light blue", rule="evenodd")
-    ### Plot kriging-predicted weed densities across the paddock
-    for (k in 1:nrow(P)){
-        # k = 1
-        idx = ceiling(P[k, 3]) + 1
-        points(P$x[k], P$y[k], pch=15, col=vec_colours[idx])
-    }
-    ### Plot populations and their resistance levels
-    for (i in 1:length(x)) {
-        idx = ceiling(z[i]) + 1
-        points(x[i], y[i], col="gray", bg=vec_colours[idx], pch=21)
-    }
-    ### Append the best-fit Kriging model
-    text(x=x_limit[1], y=y_limit[1], paste0("Kriging model: ", model), pos=4)
-    ### Heatmap legend
-    # par(fig=c(0.01, 0.4, 0.1, 0.5), cex=1, new=TRUE)
-    par(fig=c(0.77,0.97,0.3,0.5), new=TRUE)
-    par(mar=c(0,1,1,1))
-    nclass=10
-    plot(0, ylab= "", xlab="", xaxt="n", yaxt="n", type="n")
-    par(new=TRUE)
-    df_table = data.frame(bins=seq(0, 100, length=11), counts=rep(0, times=11))
-    for (i in 2:nrow(df_table)) {
-        # i = 2
-        df_table[i, 2] = sum((z >= df_table[i-1, 1]) & (z < df_table[i, 1]))
-    }
-    barplot(df_table$counts[2:nrow(df_table)], col=vec_colours[seq(1, n_colours, length=nclass)], bord=FALSE, las=1)
-    par(fig=c(0.77,0.97,0.27,0.29), new=TRUE)
-    par(mar=c(0,1,0,1))
-    h = hist(seq(0,100, length=10), ylab= "", xlab="", xaxt="n", yaxt="n", las=1, main="", nclass=nclass, 
-             col=vec_colours[seq(1, n_colours, length=10)],
-             bord=FALSE)
-    xrange = round(seq(h$breaks[1], h$breaks[length(h$breaks)], len=5), 2)
-    axis(side=1, at=xrange, labels=xrange, padj=-1)
-    mtext("Resistance (%)", side=1, padj=2.5)
-    dev.off()
+    # herbi = vec_herbicides[3]
+    REGION = LOAD_AND_DEFINE_REGION(fname_region_kml=fname_region_kml, fname_phenotype=fname_phenotype, herbicide=herbi, n_point_samples=1e4)
+    MODELS = KRIGING_AND_LINEAR_MODELS(REGION)
+    # fname_map_svg_unscaled = paste0(herbi, "_autokrige_unscaled.svg")
+    fname_map_svg_gradient = paste0(herbi, "_autokrige.svg")
+    # fname_svg = PLOT_DISTRIBUTION_MAP(REGION=REGION, MODELS=MODELS, x_limit=x_limit, y_limit=y_limit, fname_map_svg=fname_map_svg_unscaled, colours=colours[[1]], n_colours=n_colours, plot_points=TRUE, plot_krig=TRUE, rescale_krig=FALSE, hist_not_range=TRUE, label="Resistance (%)")
+    fname_svg = PLOT_DISTRIBUTION_MAP(REGION=REGION, MODELS=MODELS, x_limit=x_limit, y_limit=y_limit, fname_map_svg=fname_map_svg_gradient, colours=colours[[3]], point_colours=colours[[1]], n_colours=n_colours, plot_points=TRUE, plot_krig=TRUE, rescale_krig=TRUE, hist_not_range=FALSE, label="Mean Extrapolated Resistance (%)")
 }
-
-### Miscellaneous: create an sf object
-### Find the distances between sampled points
-dx = mean(diff(sort(unique(R$x))))
-dy = mean(diff(sort(unique(R$y))))
-### Create qadrilaterals (squares in this case since we sampled in regular intervals from the A, i.e. the landscape)
-Q = lapply(1:nrow(R), function(i){
-  M = matrix(c(R$x[i],    R$y[i],
-               R$x[i],    R$y[i]+dy,
-               R$x[i]+dx, R$y[i]+dy,
-               R$x[i]+dx, R$y[i],
-               R$x[i],    R$y[i])
-         , ncol =2, byrow = T
-  )
-  st_polygon(list(M))
-})
-header_herbicides = colnames(R)[3:ncol(R)]
-eval(parse(text=paste0("SF_OBJECT = st_sf(", paste(paste0(header_herbicides, "= R$", header_herbicides), collapse=", "), ", st_sfc(Q))")))
-SF_OBJECT ### Can be saved into shapefile but the herbicide names will be trucated because of the inherent restrictions in the file format
-sf::st_write(SF_OBJECT, "resistance_gradient.shp")
 ```
 
 ![Tri_Allate_autokrige](../res/Tri_Allate_autokrige.svg)
@@ -182,7 +53,7 @@ sf::st_write(SF_OBJECT, "resistance_gradient.shp")
 
 ## Findings
 
-There is some sifginificant geographic gradient as we move from north to south in terms of resistance to:
+There is some significant geographic gradient as we move from north to south in terms of resistance to:
 
 - **glyphosate**
 - **clethodim**
