adding multiple resistance landscape

--- a/exploratory/src/1.1_coordinates.md
+++ b/exploratory/src/1.1_coordinates.md
@@ -29,6 +29,8 @@ colours = list(rdylgn=rev(c("#A50026","#D73027","#F46D43","#FDAE61","#FEE08B","#
             spectral=rev(c("#9e0142","#d53e4f","#f46d43","#fdae61","#fee08b","#ffffbf","#e6f598","#abdda4","#66c2a5","#3288bd","#5e4fa2")),
             rdpu=c("#fff7f3","#fde0dd","#fcc5c0","#fa9fb5","#f768a1","#dd3497","#ae017e","#7a0177","#49006a"))
 n_colours = 101
+
+### Let's plot the herbicide resistance distributions
 for (herbi in vec_herbicides) {
     # herbi = vec_herbicides[3]
     REGION = LOAD_AND_DEFINE_REGION(fname_region_kml=fname_region_kml, fname_phenotype=fname_phenotype, herbicide=herbi, n_point_samples=1e4)
@@ -38,6 +40,31 @@ for (herbi in vec_herbicides) {
     # fname_svg = PLOT_DISTRIBUTION_MAP(REGION=REGION, MODELS=MODELS, x_limit=x_limit, y_limit=y_limit, fname_map_svg=fname_map_svg_unscaled, colours=colours[[1]], n_colours=n_colours, plot_points=TRUE, plot_krig=TRUE, rescale_krig=FALSE, hist_not_range=TRUE, label="Resistance (%)")
     fname_svg = PLOT_DISTRIBUTION_MAP(REGION=REGION, MODELS=MODELS, x_limit=x_limit, y_limit=y_limit, fname_map_svg=fname_map_svg_gradient, colours=colours[[3]], point_colours=colours[[1]], n_colours=n_colours, plot_points=TRUE, plot_krig=TRUE, rescale_krig=TRUE, hist_not_range=FALSE, label="Mean Extrapolated Resistance (%)")
 }
+
+### Let us define multiple resistance phenotype where we set populations as resistant if the survival level is above 20% (See Alex's notes above dated 2024/02/02 for details)
+mat_R = phenotypes[, idx_herbicide_columns] > 20
+mat_R[is.na(mat_R)] = 0 ### Set missing to zero as we want to convert multiple resistance rates back to the actual number of herbicides each population is resistant to
+vec_R = rowMeans(mat_R, na.rm=TRUE)
+phenotypes$Multiple_resistance = vec_R
+vec_herbicides = c(vec_herbicides, "Multiple_resistance")
+fname_phenotype = gsub(".csv", "-with_Multiple_resistance.csv", fname_phenotype)
+write.table(phenotypes, file=fname_phenotype, sep=",", quote=FALSE, row.names=FALSE, col.names=TRUE)
+herbi = "Multiple_resistance"
+REGION = LOAD_AND_DEFINE_REGION(fname_region_kml=fname_region_kml, fname_phenotype=fname_phenotype, herbicide=herbi, n_point_samples=1e4)
+MODELS = KRIGING_AND_LINEAR_MODELS(REGION)
+fname_map_svg_gradient = paste0(herbi, "_autokrige.svg")
+fname_svg = PLOT_DISTRIBUTION_MAP(REGION=REGION, MODELS=MODELS, x_limit=x_limit, y_limit=y_limit, fname_map_svg=fname_map_svg_gradient, colours=colours[[3]], point_colours=colours[[1]], n_colours=n_colours, plot_points=FALSE, plot_krig=TRUE, rescale_krig=TRUE, hist_not_range=FALSE,
+    label=paste0("Mean Extrapolated Multiple Resistance (%)\nObserved number of resistances per population\nmean=", 
+        round(median(vec_R*ncol(mat_R)),2),
+        "; median=", 
+        median(vec_R*ncol(mat_R)),
+        "; min=", 
+        min(vec_R*ncol(mat_R)),
+        "; max=", 
+        max(vec_R*ncol(mat_R))
+    ))
+
+
 ```
 
 ![Tri_Allate_autokrige](../res/Tri_Allate_autokrige.svg)
@@ -52,6 +79,7 @@ for (herbi in vec_herbicides) {
 ![Paraquat_autokrige](../res/Paraquat_autokrige.svg)
 ![Sulfometuron_autokrige](../res/Sulfometuron_autokrige.svg)
 ![Terbuthylazine_autokrige](../res/Terbuthylazine_autokrige.svg)
+![Multiple_resistance_autokrige](../res/Multiple_resistance_autokrige.svg)
 
 ## Findings
 
