outputting regression output dataframes to report t-test significance and extrapolated/kriged phenotype variance

--- a/exploratory/src/1.1_coordinates.md
+++ b/exploratory/src/1.1_coordinates.md
@@ -29,10 +29,16 @@ colours = list(rdylgn=rev(c("#A50026","#D73027","#F46D43","#FDAE61","#FEE08B","#
 n_colours = 101
 
 ### Let's plot the herbicide resistance distributions
+summary_mod = list()
+var_pheno = list()
 for (herbi in vec_herbicides) {
     # herbi = vec_herbicides[3]
+    print("#############################################")
+    print(herbi)
     REGION = LOAD_AND_DEFINE_REGION(fname_region_kml=fname_region_kml, fname_phenotype=fname_phenotype, herbicide=herbi, n_point_samples=1e4)
     MODELS = KRIGING_AND_LINEAR_MODELS(REGION)
+    eval(parse(text=paste0("summary_mod$`", herbi, "` = MODELS$summary_mod")))
+    eval(parse(text=paste0("var_pheno$`", herbi, "` = MODELS$var_pheno")))
     # fname_map_svg_unscaled = paste0(herbi, "_autokrige_unscaled.svg")
     fname_map_svg_gradient = paste0(herbi, "_autokrige.svg")
     # fname_svg = PLOT_DISTRIBUTION_MAP(REGION=REGION, MODELS=MODELS, x_limit=x_limit, y_limit=y_limit, fname_map_svg=fname_map_svg_unscaled, colours=colours[[1]], n_colours=n_colours, plot_points=TRUE, plot_krig=TRUE, rescale_krig=FALSE, hist_not_range=TRUE, label="Resistance (%)")
@@ -61,7 +67,7 @@ fname_svg = PLOT_DISTRIBUTION_MAP(REGION=REGION, MODELS=MODELS, x_limit=x_limit,
         "; max=", 
         max(vec_R*ncol(mat_R))
     ))
-
+print(MODELS)
 
 ```
 
